syntax = "proto3";

package wallet;

service WalletService {
  rpc CreateTransaction (CreateTransactionRequest) returns (TransactionResponse);
  rpc FindAllTransactions (FindAllTransactionsRequest) returns (TransactionListResponse);
  rpc GetBalance (GetBalanceRequest) returns (BalanceResponse);
}

enum TransactionType {
  CREDIT = 0;
  DEBIT = 1;
}

message CreateTransactionRequest {
  string user_id = 1;
  int32 amount = 2;
  TransactionType type = 3;
}

message FindAllTransactionsRequest {
  string user_id = 1;
  optional TransactionType type = 2;
}

message GetBalanceRequest {
  string user_id = 1;
}

message TransactionResponse {
  string id = 1;
  string user_id = 2;
  int32 amount = 3;
  TransactionType type = 4;
}

message TransactionListResponse {
  repeated TransactionResponse transactions = 1;
}

message BalanceResponse {
  int32 amount = 1;
}
